syntax = "proto3";

package ru.kachalov.grpc.proto;

option java_multiple_files = true;
option java_package = "ru.kachalov.grpc.proto";

message HelloRequest {
  string requestMessage = 1;
}