syntax = "proto3";

package ru.kachalov.grpc.proto;

option java_multiple_files = true;
option java_package = "ru.kachalov.grpc.proto";

message HelloResponse {
  string responseMessage = 1;
}